--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "cc-l",
   "version": "1.0.0",
   "description": "countries and cities lists",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "prepublish": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +27,10 @@
   "bugs": {
     "url": "https://github.com/MontherAmer/CCITYL/issues"
   },
-  "homepage": "https://github.com/MontherAmer/CCITYL#readme"
+  "homepage": "https://github.com/MontherAmer/CCITYL#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  }
 }
