--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,4 @@ jobs:
         if: matrix.node-version == 14
         with:
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
