--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.1.0",
 	"description": "countries and cities lists",
 	"license": "ISC",
+	"main": "./src/index.js",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/MontherAmer/cclist.git"
